crates/rome_console/tests/markup/invalid_punct.stderr
error: unexpected token
 --> tests/markup/invalid_punct.rs:3:9
  |
3 |         !
  |         ^
